# Thesis_Msc

./: .~lock.incremetnal_speed.xlsx#  README.md  incremetnal_speed.csv  incremetnal_speed.ods  otter_hizlanma.xlsx  otter_hizlanma_yavaşlama.csv
CPP_MOSA/: deneme  gnc.cpp  gnc.h  main  main.cpp  otter.cpp  otter_exe
MOSA/: deneme.ipynb  incremetnal_speed.csv  otter_hizlanma_yavaşlama.csv
TEZ_YAZIM/: TEZ OUTLINE.odt
TEZ_YAZIM/ntnu_open/Autonomous_path_planning_and_following/latex-and-figures/: README.md  abbreviations.tex  abstract.tex  appendix.tex  bibliography.bib  ccpp.tex  conclusion.tex  experiments.tex  introduction.tex  literature_review.tex  main.tex  metadata-output.txt  nomenclature.tex  path_following.tex  preface.tex  problem_formulation.tex  sammendrag.tex  session.tks  simulations.tex  slam.tex  workspace_partition.tex
TEZ_YAZIM/ntnu_open/Autonomous_path_planning_and_following/latex-and-figures/fig/ccpp/: circular_partition.eps
TEZ_YAZIM/ntnu_open/Autonomous_path_planning_and_following/latex-and-figures/fig/lit_rev/: simple_dubins_path.eps  simple_dubins_path2.eps
TEZ_YAZIM/ntnu_open/Gain_scheduled_Controller/matlab and project report/simulator/: parameters_LQR.m  simulator_LQR.slx  simulator_LQR.slxc
TEZ_YAZIM/ntnu_open/Gain_scheduled_Controller/matlab and project report/thruster mapping/: bollard_data.csv  rpm_backwards.m  rpm_forward.m  thruster_curve.m  torque_limits.m
TEZ_YAZIM/ntnu_open/Nonliner_Autonomous_Docking_and_Path_following/: Astar.m  CompareControllers.m  LOS_avoidance.m  MonteCarlo.m  PID_SMC.m  RunSimulations.m  STC.m  calc_thrust.m  debne.asv  debne.m  in_T_C.m  init.m  noiseGenerator.m  obstacle_generator.m  otter.asv  otter.m  path_replanning.m  referencemodel.m  sat.m  sat2.m
TEZ_YAZIM/ntnu_open/Nonliner_Autonomous_Docking_and_Path_following/otter_pid_grt_rtw/: build_exception.mat
TEZ_YAZIM/ntnu_open/Nonliner_Autonomous_Docking_and_Path_following/slprj/_jitprj/: jitEngineAccessInfo.mat  sOQF2U2zATxpAjsuwGNKkFF.l  sOQF2U2zATxpAjsuwGNKkFF.mat  sQcywZg62Yncn1csLHyRg2.l  sQcywZg62Yncn1csLHyRg2.mat  sgnVSTouU3QEeIU91y80RoB.l  sgnVSTouU3QEeIU91y80RoB.mat  svLQBTXq89rTU7irGml8MxF.l  svLQBTXq89rTU7irGml8MxF.mat
TEZ_YAZIM/ntnu_open/Revolt_path_following/guidance_law/: CMakeLists.txt  package.xml
TEZ_YAZIM/ntnu_open/Revolt_path_following/guidance_law/src/: GuidanceLaw.cpp
TEZ_YAZIM/ntnu_open/Revolt_path_following/heading_controller/: CMakeLists.txt  package.xml
TEZ_YAZIM/ntnu_open/Revolt_path_following/heading_controller/include/heading_controller/: HeadingController.h
TEZ_YAZIM/ntnu_open/Revolt_path_following/heading_controller/src/: HeadingController.cpp
TEZ_YAZIM/ntnu_open/Revolt_path_following/tcp_datatransceiver/: CMakeLists.txt  package.xml
TEZ_YAZIM/ntnu_open/Revolt_path_following/tcp_datatransceiver/include/tcp_datatransceiver/: TCPDatatransceiver.h
TEZ_YAZIM/ntnu_open/Revolt_path_following/tcp_datatransceiver/src/: PracticalSocket.cpp  TCPDatatransceiver.cpp
TEZ_YAZIM/ntnu_open/Revolt_path_following/udp_video_stream/: CMakeLists.txt  package.xml
TEZ_YAZIM/ntnu_open/Revolt_path_following/udp_video_stream/include/udp_video_stream/: UDPVideoStream.h  config.h
TEZ_YAZIM/ntnu_open/Revolt_path_following/udp_video_stream/src/: PracticalSocket.cpp  UDPVideoStream.cpp
cpp_mosa/: gnc.cpp  mosa_dynamic  mosa_dynamic.cpp
cpp_mosa/CPP_MOSA/: deneme.cpp  gnc.cpp  gnc.h  otter.cpp  otter.h
(+500 files in other folders)
